// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokensToCustomProperties simple case 1`] = `
":root {
  --color-primary: '#f00';

  --color-secondary: '#0f0';

  --color-tertiary: '#00f';

  --spacing-sm: '8px';

  --spacing-md: '16px';

  --spacing-lg: '24px'
};"
`;

exports[`tokensToCustomProperties with a namespace 1`] = `
":root {
  --rm-color-primary: '#f00';

  --rm-color-secondary: '#0f0';

  --rm-color-tertiary: '#00f';

  --rm-spacing-sm: '8px';

  --rm-spacing-md: '16px';

  --rm-spacing-lg: '24px'
};"
`;

exports[`tokensToCustomProperties with comments 1`] = `
":root {
  /**
   * This is the primary color.
   */
  --color-primary: '#f00';

  /**
   * This is the secondary color.
   * It should be used in some places.
   */
  --color-secondary: '#0f0';

  --color-tertiary: '#00f';

  --spacing-sm: '8px';

  --spacing-md: '16px';

  --spacing-lg: '24px'
};"
`;
